--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>t2w-vue</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" >
+    <title>team2work Vue.js</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
