S3 upload; use https for api url

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <title>team2work Vue.js</title>
+    <title>team2work</title>
+    <link href="static/bs/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
+    <script src="static/bs/bootstrap.min.js"></script>
   </body>
 </html>
