Implement new authentication system (#2)

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script src="static/bs/bootstrap.min.js"></script>
+    <script src="https://cdn.auth0.com/w2/auth0-7.4.min.js"></script>
   </body>
 </html>
