--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>team2work</title>
     <link href="static/bs/bootstrap.min.css" rel="stylesheet">
+    <script src="//cdn.auth0.com/js/lock/10.14/lock.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
     <script src="static/bs/bootstrap.min.js"></script>
-    <script src="https://cdn.auth0.com/w2/auth0-7.4.min.js"></script>
   </body>
 </html>
