Add favicon and html desc to index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>team2work</title>
+    <meta name="description" content="team2work - Arbeit auf Zeit, Erfolg auf Dauer">
+    <link rel="author" content="team2work Arbeitskräfteüberlassung GmbH, Markus Danek" />
     <link href="static/bs/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="static/bs/print.css" rel="stylesheet" type="text/css" media="print">
-    <script src="//cdn.auth0.com/js/lock/10.14/lock.min.js"></script>
+    <script src="https://cdn.auth0.com/js/lock/10.14/lock.min.js"></script>
 </head>
 <body>
     <div id="app"></div>
