--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="author" content="team2work Arbeitskräfteüberlassung GmbH, Markus Danek" />
     <link href="static/bs/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="static/bs/print.css" rel="stylesheet" type="text/css" media="print">
+    <meta name="google-site-verification" content="Emkvs2fAvQ706SVvvqTHT0r0qW-O0nXgMHXR3jW7uM0" />
     <script src="https://cdn.auth0.com/js/lock/11.7.2/lock.min.js"></script>
 </head>
 <body>
